--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-06-03  Mikael Hallendal  <micke@codefactory.se>
 
+	* NEWS: updated for 0.10
+
+	* configure.in: 0.10
+
 	* configure.in: bumped gtkhtml2 deps.
 
 	* src/yelp-window.c (window_handle_uri): 
