--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-05  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Fix.
+
 2002-06-02  Germán Poo Caamaño <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from 
