--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-06  Tõivo Leedjärv  <toivo@linux.ee>
+
+	* et.po: Fix.
+
 2002-06-05  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Fix.
