--- a/po/ca.po
+++ b/po/ca.po
@@ -238,7 +238,7 @@ msgstr "Mostra la pàgina següent en l'història"
 
 #: src/yelp-window.c:651
 msgid "Home"
-msgstr "Pàgina inicial"
+msgstr "Inici"
 
 #: src/yelp-window.c:652
 msgid "Go to home view"
