--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-07  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Catalan fix.
+
 2002-06-06  Tõivo Leedjärv  <toivo@linux.ee>
 
 	* et.po: Fix.
