--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in 1.0:
+---------------
+
+* Updated translations (nl, ru, ca, et, sv)
+
 Changes in 0.10:
 ----------------
  
@@ -9,8 +14,8 @@ Changes in 0.10:
 * Ship docbook DTD                               (Mikael Hallendal)
 * Don't hard code font sizes                     (Mikael Hallendal,
 					 	  Bill Haneman)
-* Fix that made index page only work for first
-  window                                         (Mikael Hallendal)
+* Fix bug hat made index page only work for 
+  first window                                   (Mikael Hallendal)
 * Better error handling                          (Mikael Hallendal)
 * Fixed session bug (#82605)                     (Yogeesh MB)
 * Fixes to db2html                               (Mikael Hallendal,
