--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-10  Mikael Hallendal  <micke@codefactory.se>
+
+	* configure.in: updated to 1.0
+
 2002-06-03  Mikael Hallendal  <micke@codefactory.se>
 
 	* Release 0.10
