--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-06-10  Mikael Hallendal  <micke@codefactory.se>
 
+	* Release 1.0
+
 	* configure.in: updated to 1.0
 
 2002-06-03  Mikael Hallendal  <micke@codefactory.se>
