--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-11  Abel Cheung  <maddog@linux.org.hk>
+
+	* zh_TW.po: Updated traditional Chinese translation.
+
 2002-06-10  Yanko Kaneti <yaneti@declera.com>
 
 	* bg.po: Updated Bulgarian translation.
