--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-16  Daniel Yacob  <locales@geez.org>
+
+	* am.po: New file for Amharic.
+
 2002-06-11  Jesus Bravo Alvarez  <jba@pobox.com>
 
 	* gl.po: Updated Galician translation.
