Updated Amharic translations.

--- a/po/am.po
+++ b/po/am.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp VERSION\n"
 "POT-Creation-Date: 2002-06-16 21:08+0200\n"
-"PO-Revision-Date: 2002-06-14 11:06+EST\n"
+"PO-Revision-Date: 2002-06-17 12:23+EST\n"
 "Last-Translator: Ge'ez Frontier Foundation <locales@geez.org>\n"
 "Language-Team: Amharic <locales@geez.org>\n"
 "MIME-Version: 1.0\n"
@@ -22,7 +22,7 @@ msgstr "የልፕ"
 
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
-msgstr "የልፕ ኣምራች"
+msgstr "የልፕ አምራች"
 
 #: src/yelp-main.c:111
 #, c-format
@@ -137,11 +137,11 @@ msgstr ""
 
 #: src/yelp-view-toc.c:384 src/yelp-view-toc.c:568 src/yelp-view-toc.c:786
 msgid "Documents"
-msgstr "ሠነዶች"
+msgstr "ሰነዶች"
 
 #: src/yelp-view-toc.c:385 src/yelp-view-toc.c:512 src/yelp-view-toc.c:787
 msgid "Categories"
-msgstr "ምድቦች"
+msgstr "ምድብ"
 
 #: src/yelp-view-toc.c:466
 msgid "Manual pages"
@@ -225,7 +225,7 @@ msgstr ""
 
 #: src/yelp-window.c:684
 msgid "Home"
-msgstr "መነሻ"
+msgstr "መጀመሪያ"
 
 #: src/yelp-window.c:685
 msgid "Go to home view"
