--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-17  Daniel Yacob  <locales@geez.org>
+
+	* am.po: Updated Amharic translations.
+
 2002-06-16  Daniel Yacob  <locales@geez.org>
 
 	* am.po: New file for Amharic.
