--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2002-06-19  Mikael Hallendal  <micke@codefactory.se>
+
+	* Release 1.0.1
+
+	* NEWS: updated for 1.0.1
+
+	* configure.in: updated to 1.0.1
+
 2002-06-10  Mikael Hallendal  <micke@codefactory.se>
 
 	* Release 1.0
