--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-21  Peteris Krisijanis <pecisk@inbox.lv>
+
+	* lv.po: Updated Latvian translation.
+
 2002-06-17  Daniel Yacob  <locales@geez.org>
 
 	* am.po: Updated Amharic translations.
