--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-21  Matthias Warkus <mawarkus@gnome.org>
+
+    * de.po: Update to German translation by Christian Neumair.
+
 2002-06-21  Peteris Krisijanis <pecisk@inbox.lv>
 
 	* lv.po: Updated Latvian translation.
