--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-22  Daniel Yacob  <locales@geez.org>
+
+	* am.po: Updated Amharic translations.
+
 2002-06-21  Matthias Warkus <mawarkus@gnome.org>
 
     * de.po: Update to German translation by Christian Neumair.
