--- a/po/am.po
+++ b/po/am.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp VERSION\n"
 "POT-Creation-Date: 2002-06-16 21:08+0200\n"
-"PO-Revision-Date: 2002-06-17 12:23+EST\n"
+"PO-Revision-Date: 2002-06-22 12:20+EST\n"
 "Last-Translator: Ge'ez Frontier Foundation <locales@geez.org>\n"
 "Language-Team: Amharic <locales@geez.org>\n"
 "MIME-Version: 1.0\n"
@@ -201,7 +201,7 @@ msgstr ""
 #. * will shop up in the "about" box
 #: src/yelp-window.c:599
 msgid "translator_credits"
-msgstr "የ_ተርጓሚው አመለካከት"
+msgstr "የግዕዝ Frontier Foundation"
 
 #: src/yelp-window.c:603
 msgid "Help Browser for GNOME 2.0"
