- mark some strings for translation. Fixes #84020
2002-06-27  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c (toc_page_end):
	- mark some strings for translation. Fixes #84020

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-27  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-view-toc.c (toc_page_end): 
+	- mark some strings for translation. Fixes #84020
+
 2002-06-26  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-window.c:
