- don't scale the gnome-button.
2002-06-27  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c (toc_page_end):
	- don't scale the gnome-button.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2002-06-27  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-view-toc.c (toc_page_end): 
+	- don't scale the gnome-button.
 	- mark some strings for translation. Fixes #84020
 
 2002-06-26  Mikael Hallendal  <micke@codefactory.se>
