--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2002-06-27  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-window.c: added patch from Kang Jeong-Hee to support
+	  toolbar style "both_horiz". Fixes #85529
+
 	* src/yelp-view-toc.c (toc_page_end): 
 	- don't scale the gnome-button.
 	- mark some strings for translation. Fixes #84020
