Updated Catalan translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,10 +1,14 @@
+2002-06-27  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Updated Catalan translation.
+
 2002-06-22  Daniel Yacob  <locales@geez.org>
 
 	* am.po: Updated Amharic translations.
 
 2002-06-21  Matthias Warkus <mawarkus@gnome.org>
 
-    * de.po: Update to German translation by Christian Neumair.
+	* de.po: Update to German translation by Christian Neumair.
 
 2002-06-21  Peteris Krisijanis <pecisk@inbox.lv>
 
