--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-28  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-info.c (yelp_info_init): sort info pages.
+
 2002-06-27  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-window.c: added patch from Kang Jeong-Hee to support
