--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-28  Yanko Kaneti <yaneti@declera.com>
+
+	* bg.po: Updated Bulgarian translation.
+
 2002-06-27  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation.
