--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-30  Tõivo Leedjärv  <toivo@linux.ee>
+
+	* et.po: Updated Estonian translation.
+
 2002-06-28  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
