--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-30  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
+
+	* ru.po: updated Russian translation.
+
 2002-06-30  Tõivo Leedjärv  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
