--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-02  Manuel Borchers  <webmaster@matronix.de>
+
+	* de.po: Updated German translation.
+
 2002-07-02  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian (bokmål) translation.
