--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-04  Christophe Fergeau <teuf@users.sourceforge.net>
+
+	* fr.po: Updated French translation.
+
 2002-07-03  Peteris Krisjanis <pecisk@inbox.lv>
 
 	* lv.po: Updated Latvian translation.
