Update to Amharic translation.

--- a/po/am.po
+++ b/po/am.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp VERSION\n"
 "POT-Creation-Date: 2002-06-16 21:08+0200\n"
-"PO-Revision-Date: 2002-07-02 14:40+EST\n"
+"PO-Revision-Date: 2002-07-02 12:17+EST\n"
 "Last-Translator: Ge'ez Frontier Foundation <locales@geez.org>\n"
 "Language-Team: Amharic <locales@geez.org>\n"
 "MIME-Version: 1.0\n"
@@ -121,7 +121,7 @@ msgstr "የመረጃ ይዞታዎች"
 
 #: src/yelp-view-toc.c:184
 msgid "GNOME - Desktop"
-msgstr "ኖም - ኮምፒውተር"
+msgstr "ኖም - ሠሌዳ"
 
 #: src/yelp-view-toc.c:185
 msgid "Additional documents"
