stylesheets/yelp-customization.xsl - rationalize heading styles - don't
2002-07-05  Sander Vesik <sander.vesik@sun.com>
	* stylesheets/yelp-customization.xsl
	- rationalize heading styles
	- don't center title
	- tweak list indenting

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-05  Sander Vesik <sander.vesik@sun.com>
+	* stylesheets/yelp-customization.xsl
+	- rationalize heading styles
+	- don't center title
+	- tweak list indenting
+
 2002-06-28  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-info.c (yelp_info_init): sort info pages.
