--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-25  Sander Vesik <sander.vesik@sun.com>
+	* stylesheets/yelp-customization.xsl
+	- make <book> support somewhat work
+
 2002-07-05  Sander Vesik <sander.vesik@sun.com>
 	* stylesheets/yelp-customization.xsl
 	- rationalize heading styles
