2002-07-07  Glynn Foster  <glynn.foster@sun.com>
	* yelp.desktop.in (X-GNOME-DocPath):

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-07  Glynn Foster  <glynn.foster@sun.com>
+
+	* yelp.desktop.in (X-GNOME-DocPath): 
+
 2002-07-06  Sander Vesik <sander.vesik@sun.com>
 	* stylesheets/yelp-customization.xsl
 	- make <part> and <chapter> have plain unstyled toc-s
