use X-GNOME-DocPath instead of DocPath.
2002-07-09  Mark McLoughlin  <mark@skynet.ie>

        * yelp.desktop.in: use X-GNOME-DocPath instead of DocPath.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-09  Mark McLoughlin  <mark@skynet.ie>
+
+	* yelp.desktop.in: use X-GNOME-DocPath instead of DocPath.
+
 2002-07-08  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-info.c:
