--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-09 Hasbullah bin Pit <sebol@ikhlas.com
+
+	* ms.po: Updated Malay translation.
+
 2002-07-04  Daniel Yacob  <locales@geez.org>
 
 	* am.po: Updated Amharic translations.
