--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-09  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation from Michelle Kim
+	<mkim@brisbane.redhat.com>.
+
 2002-07-09 Hasbullah bin Pit <sebol@ikhlas.com
 
 	* ms.po: Updated Malay translation.
