yelp/configure.in yelp/src/Makefile.am yelp/src/yelp-reader.c Now support
    * yelp/configure.in
    * yelp/src/Makefile.am
    * yelp/src/yelp-reader.c
    Now support libgnome installing gnome2-man2html and gnome2-info2html
    to libexec.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2002-07-11  Brian Cameron  <Brian.Cameron@sun.com>
+
+	* yelp/configure.in
+	* yelp/src/Makefile.am
+	* yelp/src/yelp-reader.c
+	Now support libgnome installing gnome2-man2html and gnome2-info2html
+	to libexec.
+
 2002-07-09  Mark McLoughlin  <mark@skynet.ie>
 
 	* yelp.desktop.in: use X-GNOME-DocPath instead of DocPath.
