--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-12  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
+
+	* nl.po: Dutch translation updated by Tino Meinen.
+
 2002-07-09  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation from Michelle Kim
