--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-13  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Updated Danish translation.
+
 2002-07-12  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
 
 	* nl.po: Dutch translation updated by Tino Meinen.
