--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-22  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* wa.po: updated Walloon file
+
 2002-07-13  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Updated Danish translation.
