small fix to Walloon file

--- a/po/wa.po
+++ b/po/wa.po
@@ -108,7 +108,7 @@ msgstr "Dji tchedje..."
 
 #: src/yelp-view-index.c:461
 msgid "Search for:"
-msgstr "Cweri on:"
+msgstr "Cweri:"
 
 #. GList           *seriesids;
 #: src/yelp-view-toc.c:183
