--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-26  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* vi.po: Updated Vietnamese file
+
 2002-07-22  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* wa.po: updated Walloon file
