Updated French translation.

--- a/po/fr.po
+++ b/po/fr.po
@@ -2,13 +2,15 @@
 # Copyright (C) 2002 Free Software Foundation, Inc.
 # maintainer: Jean-Michel Ardantz <jmardantz@ifrance.com>, 2002.
 # Christophe Merlet (RedFox) <christophe@merlet.net>, 2002.
+# Christophe Fergeau <teuf@users.sourceforge.net>, 2002.
+# Sun G11n <gnome_int_l10n@ireland.sun.com>, 2002.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 0.7\n"
-"POT-Creation-Date: 2002-07-04 17:22+0200\n"
-"PO-Revision-Date: 2002-07-04 17:23+0200\n"
-"Last-Translator: Christophe Fergeau <teuf@users.sourceforge.net>\n"
+"Project-Id-Version: yelp 1.0.1\n"
+"POT-Creation-Date: 2002-07-28 12:38+0200\n"
+"PO-Revision-Date: 2002-07-28 12:33+0200\n"
+"Last-Translator: Christophe Merlet (RedFox) <christophe@merlet.net>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,7 +27,7 @@ msgstr "Fabrique Yelp"
 #: src/yelp-main.c:114
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "Ne peut activer Yelp : « %s »"
+msgstr "Impossible d'activer Yelp : « %s »"
 
 #: src/yelp-main.c:133
 msgid "Could not open new window."
@@ -131,7 +133,7 @@ msgstr "Pages de manuel"
 
 #: src/yelp-view-toc.c:187 src/yelp-view-toc.c:567
 msgid "Info Pages"
-msgstr "Pages Info"
+msgstr "Pages d'infos"
 
 #: src/yelp-view-toc.c:384 src/yelp-view-toc.c:568 src/yelp-view-toc.c:792
 msgid "Documents"
@@ -215,8 +217,10 @@ msgstr ""
 "Mainteneur :\n"
 "Jean-Michel Ardantz <jmardantz@ifrance.com>\n"
 "\n"
-"Contributeur :\n"
-"Christophe Merlet (RedFox) <christophe@merlet.net>"
+"Contributeurs :\n"
+"Christophe Fergeau <teuf@users.sourceforge.net>\n"
+"Christophe Merlet (RedFox) <christophe@merlet.net>\n"
+"Sun G11n <gnome_int_l10n@ireland.sun.com>"
 
 #: src/yelp-window.c:606
 msgid "Help Browser for GNOME 2.0"
