--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-01  Szabolcs Ban  <shooby@gnome.hu>
+
+	* configure.in: Added "hu" to ALL_LINGUAS. Finally :)
+
 2002-07-15  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-view-toc.c (toc_start): Print with %% instead of % to
