--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-01  Szabolcs Ban <shooby@gnome.hu>
+
+	* hu.po: Updated Hungarian translation
+
 2002-07-28  Christophe Merlet  <christophe@merlet.net>
 
 	* fr.po: Updated French translation from contribution of
