--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-02  Sander Vesik <sander.vesik@sun.com>
+	* stylesheets/yelp-customization.xsl:
+	- make list items have some space around them
+	- make sublists have more consistent spacing
+	- change list styles inside sublists
+
 2002-08-01  Szabolcs Ban  <shooby@gnome.hu>
 
 	* configure.in: Added "hu" to ALL_LINGUAS. Finally :)
