--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-04  Yogeesh MB <yogeeshappa.mathighatta@wipro.com> 
+
+	* src/yelp-man.c: added function which removes multiple 
+ 	  man pathes, fixes bug#75728
+
 2002-08-02  Sander Vesik <sander.vesik@sun.com>
 	* stylesheets/yelp-customization.xsl:
 	- make list items have some space around them
