--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,10 @@
+2002-08-04  James Henstridge  <james@daa.com.au>
+
+	* docbook/dtd/ent/iso-num.ent: 
+	* docbook/dtd/ent/iso-pub.ent: Changed a few entities to render
+	  with fonts who don't have the corresponding glyphs. Fixes
+	  #85341.
+
 2002-06-03  Mikael Hallendal  <micke@codefactory.se>
 
 	* docbook/catalog.in: updated
