- Will probably solve #89431.
2002-08-04  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-scrollkeeper.c (scrollkeeper_parse_index):
	- Will probably solve #89431.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-04  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-scrollkeeper.c (scrollkeeper_parse_index): 
+	- Will probably solve #89431.
+
 2002-08-04  Padraig O'Briain  <padraig.obriain@sun.com>
 	
 	* src/yelp-reader.c (yelp_reader_start): Fixes #89038
