--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-05  Duarte Loreto <happyguy_pt@hotmail.com>
+
+        * pt.po: Updated Portuguese translation.
+
 2002-08-01  Szabolcs Ban <shooby@gnome.hu>
 
 	* hu.po: Updated Hungarian translation
