--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2002-08-05  Sander Vesik <sander.vesik@sun.com>
+	* src/yelp-db2html.c:
+	- include quotes around stylesheet path so its correctly passed in
+
+	* stylesheets/yelp-custom.xsl:
+	- move parameterisation of admonition graphics to yelp-customization.xsl
+
+	* stylesheets/yelp-customization.xsl:
+	- make <b> create a consistent result
+	- make bulleted and numbered list items align consistently
+
 2002-08-04  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-scrollkeeper.c (scrollkeeper_parse_index): 
