--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+Changes in 1.0.2:
+-----------------
+
+* Fixed missing info pages and sort info pages  (Mikael Hallendal)
+* Remove duplications in manpath                (Yogeesh MB)
+* Support for gnome2-*2html in libexec          (Brian Cameron)
+* Buffer overflow fix                           (Laavanya K R)
+* Stylesheet fixes                              (Sander Vesik)
+* Fixes for toolbar style                       (Kang Jeong-Hee)
+* Fixed window icon and about box icon          (Nicholas Curran)
+* Various minor fixes                           (Mikael Hallendal,
+					         Padraig O'Briain)
+* Updated translations 
+  (lv, de, am, ca, bg, sv, et, ru, pl, no, sk, fr, ms, ko, nl, da, 
+   wa, vi, hu)
+
 Changes in 1.0.1:
 -----------------
 
