--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2002-08-05  Mikael Hallendal  <micke@codefactory.se>
+
+	* Release 1.0.2
+
+	* NEWS: updated for 1.0.2
+
+	* configure.in: 
+	- Version updated to 1.0.2
+	- Requirement on libgnome to 2.0.2
+	- Requirement on gtkhtml2 to 1.99.10
+
 2002-08-04  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-scrollkeeper.c (scrollkeeper_parse_index): 
