--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2002-08-05  Sander Vesik <sander.vesik@sun.com>
+	* stylesheets/yelp-customization.xsl:
+	- apply bold formating to guibuttons
+	- apply mono formating to commands
+	- fix left-margin instead of margin-left
+	- relief from table formating quirks
+	- leave space after inline media objects
+
 2002-08-05  Mikael Hallendal  <micke@codefactory.se>
 
 	* Release 1.0.2
