--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2002-08-05  Sander Vesik <sander.vesik@sun.com>
+        * stylesheets/yelp-customization.xsl:
+        - apply bold formating to guibuttons
+        - apply mono formating to commands
+        - fix left-margin instead of margin-left
+        - relief from table formating quirks
+        - leave space after inline media objects
+        - make <b> create a consistent result
+        - make bulleted and numbered list items align consistently
+
+        * src/yelp-db2html.c:
+        - include quotes around stylesheet path so its correctly passed in
+
+        * stylesheets/yelp-custom.xsl:
+        - move parameterisation of admonition graphics to yelp-customization.xsl
+
+	[ This is a merge from HEAD ]
+
 2002-08-05  Mikael Hallendal  <micke@codefactory.se>
 
 	* Release 1.0.2
