--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
+2002-08-13  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-man.c:
+	(yelp_man_remove_duplicates_from_manpath): 
+	- return a GSList instead
+	- Hopefully fixed #90385
+	(yelp_man_init): using a GSList for manpathes instead of gchar **.
+
 2002-08-05  Sander Vesik <sander.vesik@sun.com>
-        * stylesheets/yelp-customization.xsl:
+
+	* stylesheets/yelp-customization.xsl:
         - apply bold formating to guibuttons
         - apply mono formating to commands
         - fix left-margin instead of margin-left
@@ -8,13 +17,12 @@
         - make <b> create a consistent result
         - make bulleted and numbered list items align consistently
 
-        * src/yelp-db2html.c:
+	* src/yelp-db2html.c:
         - include quotes around stylesheet path so its correctly passed in
 
-        * stylesheets/yelp-custom.xsl:
-        - move parameterisation of admonition graphics to yelp-customization.xsl
-
-	[ This is a merge from HEAD ]
+	* stylesheets/yelp-custom.xsl:
+        - move parameterisation of admonition graphics to
+	  yelp-customization.xsl 
 
 2002-08-05  Mikael Hallendal  <micke@codefactory.se>
 
@@ -58,7 +66,7 @@
 2002-08-04  Yogeesh MB <yogeeshappa.mathighatta@wipro.com> 
 
 	* src/yelp-man.c: added function which removes multiple 
- 	  man pathes, fixes bug#75728
+ 	  man pathes, fixes bug #75728
 
 2002-08-02  Sander Vesik <sander.vesik@sun.com>
 	* stylesheets/yelp-customization.xsl:
