--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2002-08-13  Mikael Hallendal  <micke@codefactory.se>
+ 
+	* src/yelp-man.c:
+	(yelp_man_remove_duplicates_from_manpath): 
+	- return a GSList instead
+ 	- Hopefully fixed #90385
+	(yelp_man_init): using a GSList for manpathes instead of gchar **.
+	
 2002-08-07  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-view-toc.c: 
@@ -38,7 +46,8 @@
 	- include quotes around stylesheet path so its correctly passed in
 
 	* stylesheets/yelp-custom.xsl:
-	- move parameterisation of admonition graphics to yelp-customization.xsl
+	- move parameterisation of admonition graphics to
+	  yelp-customization.xsl 
 
 	* stylesheets/yelp-customization.xsl:
 	- make <b> create a consistent result
@@ -75,7 +84,7 @@
 2002-08-04  Yogeesh MB <yogeeshappa.mathighatta@wipro.com> 
 
 	* src/yelp-man.c: added function which removes multiple 
- 	man pathes, fixes bug#75728
+ 	man pathes, fixes bug #75728
  
 2002-08-02  Sander Vesik <sander.vesik@sun.com>
 	* stylesheets/yelp-customization.xsl:
