--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Changes in 1.0.3:
+-----------------
+
+* Fixed a bug that caused Yelp to segfault on 
+  startup if you used MANPATH instead of 
+  manpath                                       (Mikael Hallendal)
+* Stylesheet improvments                        (Sander Vesik)
+* Updated translations (pt)			(Duarte Loreto)
+
 Changes in 1.0.2:
 -----------------
 
