--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
 2002-08-13  Mikael Hallendal  <micke@codefactory.se>
+
+	* Release 1.0.3
+
+	* configure.in: Bumped to 1.0.3
+
+	* NEWS: Updated for 1.0.3
+
+2002-08-13  Mikael Hallendal  <micke@codefactory.se>
  
 	* src/yelp-man.c:
 	(yelp_man_remove_duplicates_from_manpath): 
