--- a/po/ar.po
+++ b/po/ar.po
@@ -6,28 +6,29 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2002-05-24 17:01-0500\n"
-"PO-Revision-Date: 2002-05-31 19:28-0300\n"
-"Last-Translator: Isam Bayazidi <bayazidi@arabeyes.org>\n"
-"Language-Team: Arabic <support@arabeyes.org>\n"
+"POT-Creation-Date: 2002-05-26 17:58-0500\n"
+"PO-Revision-Date: 2002-05-21 09:49+0300\n"
+"Last-Translator: Sayed Jaffer Al-Mosawi <mosawi@arabeyes.org>\n"
+"Language-Team: Arabic <contact@arabeyes.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 0.9.6\n"
+"X-Generator: KBabel 1.0beta1\n"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
-msgstr "يلب"
+msgstr "Yelp"
 
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
-msgstr "مصنع يلب"
+msgstr "مصنع Yelp"
 
 #: src/yelp-db2html.c:84
 msgid ""
 "Error while parsing the stylesheet, make sure you have your docbook "
 "environment setup correctly."
-msgstr "حدث خطأ أثناء إعراب صفحة النمط، تأكد من كونك نصبت بيئة docbook بشكل صحيح."
+msgstr ""
+"حدث خطأ أثناء إعراب صفحة النمط، تأكد من كونك نصبت بيئة docbook بشكل صحيح."
 
 #: src/yelp-db2html.c:101
 #, c-format
@@ -41,7 +42,7 @@ msgstr "حدث خطأ أثناء تطبيق صفحة النمط."
 #: src/yelp-main.c:109
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "لا استطيع تنشيط يلب : '%s'"
+msgstr "لا استطيع تنشيط Yelp : '%s'"
 
 #: src/yelp-main.c:128
 msgid "Could not open new window."
@@ -163,44 +164,44 @@ msgstr "صفحات الدليل"
 
 #: src/yelp-window.c:152
 msgid "/_File"
-msgstr "/ملف"
+msgstr "/م_لف"
 
 #: src/yelp-window.c:153
 msgid "/File/_New window"
-msgstr "/ملف/نافذة جديدة"
+msgstr "/ملف/نافذة جد_يدة"
 
 #: src/yelp-window.c:154
 msgid "/File/_Close window"
-msgstr "/ملف/اغلق النافذة"
+msgstr "/ملف/_اغلق النافذة"
 
 #. {N_("/File/_Quit"),         NULL,         window_exit_cb,         0,                           "<StockItem>", GTK_STOCK_QUIT    },
 #: src/yelp-window.c:156
 msgid "/_Go"
-msgstr "/انطلق"
+msgstr "/ان_طلق"
 
 #: src/yelp-window.c:157
 msgid "/Go/_Back"
-msgstr "/انطلق/خلف"
+msgstr "/انطلق/_خلف"
 
 #: src/yelp-window.c:158
 msgid "/Go/_Forward"
-msgstr "/انطلق/تقديم"
+msgstr "/انطلق/تق_ديم"
 
 #: src/yelp-window.c:159
 msgid "/Go/_Home"
-msgstr "/انطلق/منزل"
+msgstr "/انطلق/_منزل"
 
 #: src/yelp-window.c:160
 msgid "/Go/_Index"
-msgstr "/انطلق/فهرس"
+msgstr "/انطلق/_فهرس"
 
 #: src/yelp-window.c:161
 msgid "/_Help"
-msgstr "/مساعدة"
+msgstr "/_مساعدة"
 
 #: src/yelp-window.c:162
 msgid "/Help/_About"
-msgstr "/مساعدة/عن"
+msgstr "/مساعدة/ع_ن"
 
 #: src/yelp-window.c:224
 msgid "Help Browser"
@@ -210,7 +211,7 @@ msgstr "متصفح المساعدة"
 #. * will shop up in the "about" box
 #: src/yelp-window.c:567
 msgid "translator_credits"
-msgstr "تكريم للمترجمين"
+msgstr "_تكريم للمترجمين"
 
 #: src/yelp-window.c:571
 msgid "Help Browser for GNOME 2.0"
@@ -264,4 +265,3 @@ msgstr "مساعدة"
 
 #~ msgid "man"
 #~ msgstr "man"
-
