--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-18  jacob berkman  <jacob@ximian.com>
+
+	* fix .server file entries
+
 2002-08-09  Duarte Loreto <happyguy_pt@hotmail.com>
 
         * pt.po: Updated Portuguese translation.
