--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-19  Simos Xenitellis  <simos@hellug.gr>
+
+	* el.po: Updated Greek translation.
+
 2002-08-18  jacob berkman  <jacob@ximian.com>
 
 	* fix .server file entries
