--- a/po/el.po
+++ b/po/el.po
@@ -2,15 +2,17 @@
 # Copyright (C) 2002 Free Software Foundation, Inc.
 # Simos Xenitellis <simos@hellug.gr>, 2002.
 # 
+# 59 messages, 19Aug2002, started logging.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 1.0\n"
-"POT-Creation-Date: 2002-03-01 15:58+0000\n"
-"PO-Revision-Date: 2002-03-01 15:57+0000\n"
+"Project-Id-Version: yelp 1.0.3\n"
+"POT-Creation-Date: 2002-08-19 12:51+0100\n"
+"PO-Revision-Date: 2002-08-19 12:53+0100\n"
 "Last-Translator: Simos Xenitellis <simos@hellug.gr>\n"
 "Language-Team: Greek <nls@tux.hellug.gr>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-7\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #
@@ -20,251 +22,277 @@ msgstr "Yelp"
 
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
-msgstr "Εργοστάσιο Yelp"
+msgstr "Ξ•ΟΞ³ΞΏΟƒΟ„Ξ¬ΟƒΞΉΞΏ Yelp"
 
-#: src/yelp-info.c:99
-msgid "info"
-msgstr "info"
-
-#: src/yelp-main.c:91
+#: src/yelp-main.c:114
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "Αδύνατη η ενεργοποίηση του Yelp: '%s'"
+msgstr "Ξ‘Ξ΄ΟΞ½Ξ±Ο„Ξ· Ξ· ΞµΞ½ΞµΟΞ³ΞΏΟ€ΞΏΞ―Ξ·ΟƒΞ· Ο„ΞΏΟ… Yelp: '%s'"
 
-#: src/yelp-main.c:110
+#: src/yelp-main.c:133
 msgid "Could not open new window."
-msgstr "Αδύνατο το άνοιγμα νέου παραθύρου."
+msgstr "Ξ‘Ξ΄ΟΞ½Ξ±Ο„ΞΏ Ο„ΞΏ Ξ¬Ξ½ΞΏΞΉΞ³ΞΌΞ± Ξ½Ξ­ΞΏΟ… Ο€Ξ±ΟΞ±ΞΈΟΟΞΏΟ…."
 
-#: src/yelp-man.c:271 src/yelp-man.c:292 src/yelp-man.c:328 src/yelp-man.c:360
-#: src/yelp-man.c:376 src/yelp-man.c:387
+#: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
+#: src/yelp-man.c:401 src/yelp-man.c:412
 msgid "X11"
 msgstr "X11"
 
 #
-#: src/yelp-man.c:276 src/yelp-man.c:307 src/yelp-man.c:365 src/yelp-man.c:392
+#: src/yelp-man.c:301 src/yelp-man.c:332 src/yelp-man.c:390 src/yelp-man.c:417
 msgid "OpenSSL"
 msgstr "OpenSSL"
 
-#: src/yelp-man.c:281
+#: src/yelp-man.c:306
 msgid "Termcap"
 msgstr "Termcap"
 
-#: src/yelp-man.c:297
+#: src/yelp-man.c:322
 msgid "Perl"
 msgstr "Perl"
 
-#: src/yelp-man.c:302
+#: src/yelp-man.c:327
 msgid "Qt"
 msgstr "Qt"
 
-#: src/yelp-man.c:312
+#: src/yelp-man.c:337
 msgid "TIFF"
 msgstr "TIFF"
 
-#: src/yelp-man.c:317
+#: src/yelp-man.c:342
 msgid "PThreads"
 msgstr "PThreads"
 
-#: src/yelp-man.c:339
+#: src/yelp-man.c:364
 msgid "System Calls"
-msgstr "Κλήσεις Συστήματος"
+msgstr "ΞΞ»Ξ®ΟƒΞµΞΉΟ‚ Ξ£Ο…ΟƒΟ„Ξ®ΞΌΞ±Ο„ΞΏΟ‚"
 
-#: src/yelp-man.c:344
+#: src/yelp-man.c:369
 msgid "Library Functions"
-msgstr "Συναρτήσεις Βιβλιοθήκων"
+msgstr "Ξ£Ο…Ξ½Ξ±ΟΟ„Ξ®ΟƒΞµΞΉΟ‚ Ξ’ΞΉΞ²Ξ»ΞΉΞΏΞΈΞ®ΞΊΟ‰Ξ½"
 
-#: src/yelp-man.c:349
+#: src/yelp-man.c:374
 msgid "Kernel Routines"
-msgstr "Ρουτίνες Πυρήνα"
-
-#: src/yelp-man.c:404
-msgid "Applications"
-msgstr "Εφαρμογές"
-
-#: src/yelp-man.c:409
-msgid "Development"
-msgstr "Ανάπτυξη Εφαρμογών"
-
-#: src/yelp-man.c:414
-msgid "Hardware Devices"
-msgstr "Συσκευές Υλικού"
-
-#: src/yelp-man.c:419
-msgid "Configuration Files"
-msgstr "Αρχεία Ρυθμίσεων"
-
-#: src/yelp-man.c:424
-msgid "Games"
-msgstr "Παιχνίδια"
+msgstr "Ξ΅ΞΏΟ…Ο„Ξ―Ξ½ΞµΟ‚ Ξ Ο…ΟΞ®Ξ½Ξ±"
 
 #: src/yelp-man.c:429
-msgid "Overviews"
-msgstr "Γενικές Επισκοπήσεις"
+msgid "Applications"
+msgstr "Ξ•Ο†Ξ±ΟΞΌΞΏΞ³Ξ­Ο‚"
 
 #: src/yelp-man.c:434
+msgid "Development"
+msgstr "Ξ‘Ξ½Ξ¬Ο€Ο„Ο…ΞΎΞ· Ξ•Ο†Ξ±ΟΞΌΞΏΞ³ΟΞ½"
+
+#: src/yelp-man.c:439
+msgid "Hardware Devices"
+msgstr "Ξ£Ο…ΟƒΞΊΞµΟ…Ξ­Ο‚ Ξ¥Ξ»ΞΉΞΊΞΏΟ"
+
+#: src/yelp-man.c:444
+msgid "Configuration Files"
+msgstr "Ξ‘ΟΟ‡ΞµΞ―Ξ± Ξ΅Ο…ΞΈΞΌΞ―ΟƒΞµΟ‰Ξ½"
+
+#: src/yelp-man.c:449
+msgid "Games"
+msgstr "Ξ Ξ±ΞΉΟ‡Ξ½Ξ―Ξ΄ΞΉΞ±"
+
+#: src/yelp-man.c:454
+msgid "Overviews"
+msgstr "Ξ“ΞµΞ½ΞΉΞΊΞ­Ο‚ Ξ•Ο€ΞΉΟƒΞΊΞΏΟ€Ξ®ΟƒΞµΞΉΟ‚"
+
+#: src/yelp-man.c:459
 msgid "System Administration"
-msgstr "Διαχείριση Συστήματος"
-
-#: src/yelp-man.c:445
-msgid "man"
-msgstr "man"
+msgstr "Ξ”ΞΉΞ±Ο‡ΞµΞ―ΟΞΉΟƒΞ· Ξ£Ο…ΟƒΟ„Ξ®ΞΌΞ±Ο„ΞΏΟ‚"
 
 #
-#: src/yelp-view-content.c:209 src/yelp-view-index.c:229
+#: src/yelp-view-content.c:420 src/yelp-view-index.c:498
 msgid "Section"
-msgstr "Ενότητα"
+msgstr "Ξ•Ξ½ΟΟ„Ξ·Ο„Ξ±"
 
-#: src/yelp-view-index.c:211
+#: src/yelp-view-content.c:555 src/yelp-view-index.c:562
+msgid "Loading..."
+msgstr "Ξ¦ΞΏΟΟ„ΟΞ½ΞµΟ„Ξ±ΞΉ..."
+
+#: src/yelp-view-index.c:461
 msgid "Search for:"
-msgstr "Αναζήτηση για:"
+msgstr "Ξ‘Ξ½Ξ±Ξ¶Ξ®Ο„Ξ·ΟƒΞ· Ξ³ΞΉΞ±:"
+
+#. GList           *seriesids;
+#: src/yelp-view-toc.c:183
+msgid "Help Contents"
+msgstr "Ξ ΞµΟΞΉΞµΟ‡ΟΞΌΞµΞ½Ξ± Ξ’ΞΏΞ®ΞΈΞµΞΉΞ±Ο‚"
+
+#: src/yelp-view-toc.c:184
+msgid "GNOME - Desktop"
+msgstr "GNOME - Ξ•Ο€ΞΉΟ†Ξ¬Ξ½ΞµΞΉΞ± ΞµΟΞ³Ξ±ΟƒΞ―Ξ±Ο‚"
+
+#: src/yelp-view-toc.c:185
+msgid "Additional documents"
+msgstr "Ξ•Ο€ΞΉΟ€Ξ»Ξ­ΞΏΞ½ Ξ­Ξ³Ξ³ΟΞ±Ο†Ξ±"
+
+#: src/yelp-view-toc.c:186 src/yelp-view-toc.c:511
+msgid "Manual Pages"
+msgstr "Ξ£ΞµΞ»Ξ―Ξ΄ΞµΟ‚ Ξ¤ΞµΞΊΞΌΞ·ΟΞ―Ο‰ΟƒΞ·Ο‚"
+
+#: src/yelp-view-toc.c:187 src/yelp-view-toc.c:567
+msgid "Info Pages"
+msgstr "Ξ£ΞµΞ»Ξ―Ξ΄ΞµΟ‚ info"
 
 #
-#: src/yelp-view-toc.c:271
-msgid "Other Documents"
-msgstr "¶λλα Έγγραφα"
+#: src/yelp-view-toc.c:384 src/yelp-view-toc.c:568 src/yelp-view-toc.c:792
+msgid "Documents"
+msgstr "ΞΞ³Ξ³ΟΞ±Ο†Ξ±"
 
-#: src/yelp-view-toc.c:272 src/yelp-view-toc.c:481
+#: src/yelp-view-toc.c:385 src/yelp-view-toc.c:512 src/yelp-view-toc.c:793
+msgid "Categories"
+msgstr "ΞΞ±Ο„Ξ·Ξ³ΞΏΟΞ―ΞµΟ‚"
+
+#: src/yelp-view-toc.c:466
 msgid "Manual pages"
-msgstr "Σελίδες τεκμηρίωσης"
+msgstr "Ξ£ΞµΞ»Ξ―Ξ΄ΞµΟ‚ Ο„ΞµΞΊΞΌΞ·ΟΞ―Ο‰ΟƒΞ·Ο‚"
 
-#: src/yelp-view-toc.c:273 src/yelp-view-toc.c:558 src/yelp-view-toc.c:577
-msgid "Info pages"
-msgstr "Σελίδες info"
+#: src/yelp-view-toc.c:731
+msgid "GNOME is"
+msgstr "Ξ¤ΞΏ GNOME ΞµΞ―Ξ½Ξ±ΞΉ"
 
-#: src/yelp-view-toc.c:274
-msgid "Installed documents"
-msgstr "Εγκατεστημένα έγγραφα"
+#: src/yelp-view-toc.c:732
+msgid "Free Software"
+msgstr "Ξ•Ξ»ΞµΟΞΈΞµΟΞΏ Ξ›ΞΏΞ³ΞΉΟƒΞΌΞΉΞΊΟ"
 
-#: src/yelp-view-toc.c:286
-msgid "Start page"
-msgstr "Αρχική σελίδα"
+#: src/yelp-view-toc.c:733
+msgid "(C)"
+msgstr "(C)"
 
-#: src/yelp-view-toc.c:511
-msgid "Manual Pages"
-msgstr "Σελίδες Τεκμηρίωσης"
-
-#: src/yelp-view-toc.c:679
-msgid "Scrollkeeper docs for category"
-msgstr "Έγγραφα scrollkeeper για κατηγορία"
-
-#: src/yelp-window.c:138
+#: src/yelp-window.c:159
 msgid "/_File"
-msgstr "/_Αρχείο"
+msgstr "/_Ξ‘ΟΟ‡ΞµΞ―ΞΏ"
 
-#: src/yelp-window.c:139
+#: src/yelp-window.c:160
 msgid "/File/_New window"
-msgstr "/Αρχείο/_Νέο παράθυρο"
+msgstr "/Ξ‘ΟΟ‡ΞµΞ―ΞΏ/_ΞΞ­ΞΏ Ο€Ξ±ΟΞ¬ΞΈΟ…ΟΞΏ"
 
-#: src/yelp-window.c:140
+#: src/yelp-window.c:161
 msgid "/File/_Close window"
-msgstr "/Αρχείο/Κ_λείσιμο παραθύρου"
+msgstr "/Ξ‘ΟΟ‡ΞµΞ―ΞΏ/Ξ_Ξ»ΞµΞ―ΟƒΞΉΞΌΞΏ Ο€Ξ±ΟΞ±ΞΈΟΟΞΏΟ…"
 
-#: src/yelp-window.c:141
-msgid "/File/_Quit"
-msgstr "/Αρχείο/Έ_ξοδος"
-
-#: src/yelp-window.c:142
+#. {N_("/File/_Quit"),         NULL,         window_exit_cb,         0,                           "<StockItem>", GTK_STOCK_QUIT    },
+#: src/yelp-window.c:163
 msgid "/_Go"
-msgstr "/_Πήγαινε"
+msgstr "/_Ξ Ξ®Ξ³Ξ±ΞΉΞ½Ξµ"
 
-#: src/yelp-window.c:143
+#: src/yelp-window.c:164
 msgid "/Go/_Back"
-msgstr "/Πήγαινε/_Πίσω"
+msgstr "/Ξ Ξ®Ξ³Ξ±ΞΉΞ½Ξµ/_Ξ Ξ―ΟƒΟ‰"
 
-#: src/yelp-window.c:144
+#: src/yelp-window.c:165
 msgid "/Go/_Forward"
-msgstr "/Πήγαινε/_Μπροστά"
+msgstr "/Ξ Ξ®Ξ³Ξ±ΞΉΞ½Ξµ/_ΞΟ€ΟΞΏΟƒΟ„Ξ¬"
 
-#: src/yelp-window.c:145
+#: src/yelp-window.c:166
 msgid "/Go/_Home"
-msgstr "/Πήγαινε/_Αρχή"
+msgstr "/Ξ Ξ®Ξ³Ξ±ΞΉΞ½Ξµ/_Ξ‘ΟΟ‡Ξ®"
 
-#: src/yelp-window.c:146
+#: src/yelp-window.c:167
 msgid "/Go/_Index"
-msgstr "/Πήγαινε/_Περι"
+msgstr "/Ξ Ξ®Ξ³Ξ±ΞΉΞ½Ξµ/_Ξ ΞµΟΞΉ"
 
-#: src/yelp-window.c:147
+#: src/yelp-window.c:168
 msgid "/_Help"
-msgstr "/_Βοήθεια"
+msgstr "/_Ξ’ΞΏΞ®ΞΈΞµΞΉΞ±"
 
-#: src/yelp-window.c:148
+#: src/yelp-window.c:169
 msgid "/Help/_About"
-msgstr "/Βοήθεια/_Περί"
+msgstr "/Ξ’ΞΏΞ®ΞΈΞµΞΉΞ±/_Ξ ΞµΟΞ―"
 
-#: src/yelp-window.c:207
+#: src/yelp-window.c:227 src/yelp-window.c:429
 msgid "Help Browser"
-msgstr "Πρόγραμμα Βοήθειας"
+msgstr "Ξ ΟΟΞ³ΟΞ±ΞΌΞΌΞ± Ξ’ΞΏΞ®ΞΈΞµΞΉΞ±Ο‚"
 
-#: src/yelp-window.c:529
-msgid "translator_credits"
-msgstr "Συμεών (σίμος) Ξενιτέλλης <simos@hellug.gr>"
+#: src/yelp-window.c:339
+#, c-format
+msgid "The document '%s' does not exist"
+msgstr "Ξ¤ΞΏ Ξ­Ξ³Ξ³ΟΞ±Ο†ΞΏ '%s' Ξ΄ΞµΞ½ Ο…Ο€Ξ¬ΟΟ‡ΞµΞΉ"
 
-#: src/yelp-window.c:533
-msgid "Help Browser for GNOME 2.0"
-msgstr "Πρόγραμμα Περιήγησης Βοήθειας για το GNOME 2.0"
-
-#: src/yelp-window.c:560
-msgid "Back"
-msgstr "Πίσω"
-
-#: src/yelp-window.c:561
-msgid "Show previous page in history"
-msgstr "Εμφάνιση προηγούμενης σελίδας του ιστορικού"
-
-#: src/yelp-window.c:572
-msgid "Forward"
-msgstr "Μπροστά"
-
-#: src/yelp-window.c:573
-msgid "Show next page in history"
-msgstr "Εμφάνιση επόμενης σελίδες του ιστορικού"
-
-#: src/yelp-window.c:586
-msgid "Home"
-msgstr "Αρχή"
-
-#: src/yelp-window.c:587
-msgid "Go to home view"
-msgstr "Πήγαινε στην προβολή περιεχομένων"
-
-#: src/yelp-window.c:597
-msgid "Index"
-msgstr "Περιεχόμενα"
-
+#. Note to translators: put here your name (and address) so it
+#. * will shop up in the "about" box
 #: src/yelp-window.c:598
+msgid "translator_credits"
+msgstr "Ξ£Ο…ΞΌΞµΟΞ½ (ΟƒΞ―ΞΌΞΏΟ‚) ΞΞµΞ½ΞΉΟ„Ξ­Ξ»Ξ»Ξ·Ο‚ <simos@hellug.gr>"
+
+#: src/yelp-window.c:602
+msgid "Help Browser for GNOME 2.0"
+msgstr "Ξ ΟΟΞ³ΟΞ±ΞΌΞΌΞ± Ξ ΞµΟΞΉΞ®Ξ³Ξ·ΟƒΞ·Ο‚ Ξ’ΞΏΞ®ΞΈΞµΞΉΞ±Ο‚ Ξ³ΞΉΞ± Ο„ΞΏ GNOME 2.0"
+
+#: src/yelp-window.c:657
+msgid "Back"
+msgstr "Ξ Ξ―ΟƒΟ‰"
+
+#: src/yelp-window.c:658
+msgid "Show previous page in history"
+msgstr "Ξ•ΞΌΟ†Ξ¬Ξ½ΞΉΟƒΞ· Ο€ΟΞΏΞ·Ξ³ΞΏΟΞΌΞµΞ½Ξ·Ο‚ ΟƒΞµΞ»Ξ―Ξ΄Ξ±Ο‚ Ο„ΞΏΟ… ΞΉΟƒΟ„ΞΏΟΞΉΞΊΞΏΟ"
+
+#: src/yelp-window.c:669
+msgid "Forward"
+msgstr "ΞΟ€ΟΞΏΟƒΟ„Ξ¬"
+
+#: src/yelp-window.c:670
+msgid "Show next page in history"
+msgstr "Ξ•ΞΌΟ†Ξ¬Ξ½ΞΉΟƒΞ· ΞµΟ€ΟΞΌΞµΞ½Ξ·Ο‚ ΟƒΞµΞ»Ξ―Ξ΄ΞµΟ‚ Ο„ΞΏΟ… ΞΉΟƒΟ„ΞΏΟΞΉΞΊΞΏΟ"
+
+#: src/yelp-window.c:683
+msgid "Home"
+msgstr "Ξ‘ΟΟ‡Ξ®"
+
+#: src/yelp-window.c:684
+msgid "Go to home view"
+msgstr "Ξ Ξ®Ξ³Ξ±ΞΉΞ½Ξµ ΟƒΟ„Ξ·Ξ½ Ο€ΟΞΏΞ²ΞΏΞ»Ξ® Ο€ΞµΟΞΉΞµΟ‡ΞΏΞΌΞ­Ξ½Ο‰Ξ½"
+
+#: src/yelp-window.c:694
+msgid "Index"
+msgstr "Ξ ΞµΟΞΉΞµΟ‡ΟΞΌΞµΞ½Ξ±"
+
+#: src/yelp-window.c:695
 msgid "Search in the index"
-msgstr "Αναζήτηση στο κατάλογο"
-
-#: src/yelp-window.c:608
-msgid "Search for a phrase in the document"
-msgstr "Αναζήτηση φράσης στο έγγραφο"
-
-#: src/yelp-window.c:614
-msgid "Help on "
-msgstr "Βοήθεια πάνω σε "
-
-#: src/yelp-window.c:619
-msgid "Enter phrase to search for in all documents"
-msgstr "Εισαγωγή φράσης για αναζήτηση σε όλα τα έγγραφα"
+msgstr "Ξ‘Ξ½Ξ±Ξ¶Ξ®Ο„Ξ·ΟƒΞ· ΟƒΟ„ΞΏ ΞΊΞ±Ο„Ξ¬Ξ»ΞΏΞ³ΞΏ"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "Λήψη βοήθειας για το GNOME"
+msgstr "Ξ›Ξ®ΟΞ· Ξ²ΞΏΞ®ΞΈΞµΞΉΞ±Ο‚ Ξ³ΞΉΞ± Ο„ΞΏ GNOME"
 
 #
 #: yelp.desktop.in.h:2
 msgid "Help"
-msgstr "Βοήθεια"
+msgstr "Ξ’ΞΏΞ®ΞΈΞµΞΉΞ±"
+
+#~ msgid "info"
+#~ msgstr "info"
+
+#~ msgid "man"
+#~ msgstr "man"
+
+#~ msgid "Start page"
+#~ msgstr "Ξ‘ΟΟ‡ΞΉΞΊΞ® ΟƒΞµΞ»Ξ―Ξ΄Ξ±"
+
+#~ msgid "Scrollkeeper docs for category"
+#~ msgstr "ΞΞ³Ξ³ΟΞ±Ο†Ξ± scrollkeeper Ξ³ΞΉΞ± ΞΊΞ±Ο„Ξ·Ξ³ΞΏΟΞ―Ξ±"
+
+#~ msgid "/File/_Quit"
+#~ msgstr "/Ξ‘ΟΟ‡ΞµΞ―ΞΏ/Ξ_ΞΎΞΏΞ΄ΞΏΟ‚"
+
+#~ msgid "Search for a phrase in the document"
+#~ msgstr "Ξ‘Ξ½Ξ±Ξ¶Ξ®Ο„Ξ·ΟƒΞ· Ο†ΟΞ¬ΟƒΞ·Ο‚ ΟƒΟ„ΞΏ Ξ­Ξ³Ξ³ΟΞ±Ο†ΞΏ"
+
+#~ msgid "Enter phrase to search for in all documents"
+#~ msgstr "Ξ•ΞΉΟƒΞ±Ξ³Ο‰Ξ³Ξ® Ο†ΟΞ¬ΟƒΞ·Ο‚ Ξ³ΞΉΞ± Ξ±Ξ½Ξ±Ξ¶Ξ®Ο„Ξ·ΟƒΞ· ΟƒΞµ ΟΞ»Ξ± Ο„Ξ± Ξ­Ξ³Ξ³ΟΞ±Ο†Ξ±"
 
 #~ msgid "Manual page sections"
-#~ msgstr "Ενότητες σελίδων τεκμηρίωσης"
+#~ msgstr "Ξ•Ξ½ΟΟ„Ξ·Ο„ΞµΟ‚ ΟƒΞµΞ»Ξ―Ξ΄Ο‰Ξ½ Ο„ΞµΞΊΞΌΞ·ΟΞ―Ο‰ΟƒΞ·Ο‚"
 
 #~ msgid "Go back in the history list"
-#~ msgstr "Πήγαινε πίσω στη λίστα ιστορικού"
+#~ msgstr "Ξ Ξ®Ξ³Ξ±ΞΉΞ½Ξµ Ο€Ξ―ΟƒΟ‰ ΟƒΟ„Ξ· Ξ»Ξ―ΟƒΟ„Ξ± ΞΉΟƒΟ„ΞΏΟΞΉΞΊΞΏΟ"
 
 #~ msgid "Go forth in the history list"
-#~ msgstr "Πήγαινε μπροστά στη λίστα ιστορικού"
+#~ msgstr "Ξ Ξ®Ξ³Ξ±ΞΉΞ½Ξµ ΞΌΟ€ΟΞΏΟƒΟ„Ξ¬ ΟƒΟ„Ξ· Ξ»Ξ―ΟƒΟ„Ξ± ΞΉΟƒΟ„ΞΏΟΞΉΞΊΞΏΟ"
 
 #
 #~ msgid "Overview of contents"
-#~ msgstr "Επισκόπηση περιεχομένων"
+#~ msgstr "Ξ•Ο€ΞΉΟƒΞΊΟΟ€Ξ·ΟƒΞ· Ο€ΞµΟΞΉΞµΟ‡ΞΏΞΌΞ­Ξ½Ο‰Ξ½"
