--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-19  Sander Vesik <sander.vesik@sun.com>
+
+	* stylesheets/yelp-customization.xsl:
+	- make more table borders show up in the user guide
+
 2002-08-16  Padraig O'Briain  <padraig.obriain@sun.com>
 
 	* src/yelp-html-gtkhtml1.c
