--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-20  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-view-toc.c (toc_page_end): removed a new line before
+	  the gnome2 logo.
+
 2002-08-19  Sander Vesik <sander.vesik@sun.com>
 
 	* stylesheets/yelp-customization.xsl:
