--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-21  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-html-gtkhtml2.c (html_url_requested_cb): 
+	- Don't use the full base-uri for resolving relative
+	links. Instead use the path part of the base-uri. Fixes #91199
+
 2002-08-20  Ross Burton  <ross@burtonini.com>
  
 	* yelp.desktop.in: 
