--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
-2002-08-19  Ross Burton  <ross@burtonini.com>
+2002-08-21  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-html-gtkhtml2.c (html_url_requested_cb): 
+	- Don't use the full base-uri for resolving relative
+	links. Instead use the path part of the base-uri. Fixes #91199
+
+2002-08-20  Ross Burton  <ross@burtonini.com>
  
 	* yelp.desktop.in: 
 	- Fix the desktop file so that it validates correctly.
