--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2002-08-23  Mikael Hallendal  <micke@codefactory.se>
 
+	* Release 1.0.4
+
+	* configure.in: 1.0.4, updated gtkhtml2 reqs to 2.0.2
+
+	* NEWS: Updated for 1.0.4
+	
 	* src/yelp-view-content.c:
 	(yelp_view_content_show_uri): Applied patch from Padraig to fix
 	focus handling. Fixes #90010.
