--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Changes in 1.0.4:
+-----------------
+
+* Fixed so that background color isn't always 
+  white                                         (Padraig O'Briain)
+* Fixed the desktop file so it validates        (Ross Burton)
+* a11y fix                                      (Padraig O'Briain)
+* Fixed bug causing Yelp to hang on certain 
+  HTML pages                                    (Mikael Hallendal)
+* Updated translation (el).
+
 Changes in 1.0.3:
 -----------------
 
