--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-24  Roozbeh Pournader  <roozbeh@sharif.edu>
+
+	* fa.po: Added Persian translation.
+
 2002-08-19  Simos Xenitellis  <simos@hellug.gr>
 
 	* el.po: Updated Greek translation.
