--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-27  Germán Poo Caamaño <gpoo@ubiobio.cl>
+
+	* es.po: Updated Spanish translation from 
+	Juan Manuel García Molina <juanma_gm@wanadoo.es>
+
 2002-08-05  Duarte Loreto <happyguy_pt@hotmail.com>
 
         * pt.po: Updated Portuguese translation.
