--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Changes in 1.0.5:
+-----------------
+
+* Fixed a bug causing weird behaviour in the 
+  Content view                                  (Kristian Rietveld)
+
 Changes in 1.0.4:
 -----------------
 
