--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2002-08-28  Mikael Hallendal  <micke@codefactory.se>
+
+	* Release 1.0.5
+
+	* configure.in: 1.0.5
+
+	* NEWS: Updated for 1.0.5
+
 2002-08-27  Kristian Rietveld  <kris@gtk.org>
 
 	* src/yelp-view-content.c (content_reader_finished_cb): don't just
