removed trailing comma in the enum. Fixes #91789
2002-08-29  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c: removed trailing comma in the enum. Fixes
	  #91789

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-29  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-window.c: removed trailing comma in the enum. Fixes
+	  #91789
+
 2002-08-28  Mikael Hallendal  <micke@codefactory.se>
 
 	* Release 1.0.5
