--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-01  Marius Andreiana <mandreiana@yahoo.com>
+
+	* configure.in: added 'ro' to ALL_LINGUAS
+
 2002-08-29  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-window.c: removed trailing comma in the enum. Fixes
