--- a/po/ca.po
+++ b/po/ca.po
@@ -4,9 +4,9 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 1.0.1\n"
+"Project-Id-Version: yelp 1.0.5\n"
 "POT-Creation-Date: 2002-06-27 23:43+0200\n"
-"PO-Revision-Date: 2002-06-27 23:46+0200\n"
+"PO-Revision-Date: 2002-09-02 01:18+0200\n"
 "Last-Translator: Jordi Mallach <jordi@sindominio.net>\n"
 "Language-Team: Catalan <gnome@softcatala.net>\n"
 "MIME-Version: 1.0\n"
@@ -61,7 +61,7 @@ msgstr "PThreads"
 
 #: src/yelp-man.c:362
 msgid "System Calls"
-msgstr "Cridades del sistema"
+msgstr "Cridades al sistema"
 
 #: src/yelp-man.c:367
 msgid "Library Functions"
@@ -105,11 +105,11 @@ msgstr "Secció"
 
 #: src/yelp-view-content.c:555 src/yelp-view-index.c:562
 msgid "Loading..."
-msgstr "Carregant..."
+msgstr "S'està carregant..."
 
 #: src/yelp-view-index.c:461
 msgid "Search for:"
-msgstr "Cercar:"
+msgstr "Cerca:"
 
 #. GList           *seriesids;
 #: src/yelp-view-toc.c:183
@@ -118,7 +118,7 @@ msgstr "Continguts de l'ajuda"
 
 #: src/yelp-view-toc.c:184
 msgid "GNOME - Desktop"
-msgstr "GNOME - Escritori"
+msgstr "GNOME - Escriptori"
 
 #: src/yelp-view-toc.c:185
 msgid "Additional documents"
@@ -166,7 +166,7 @@ msgstr "/Fitxer/_Nova finestra"
 
 #: src/yelp-window.c:160
 msgid "/File/_Close window"
-msgstr "/Fitxer/_Tanca finestra"
+msgstr "/Fitxer/_Tanca la finestra"
 
 #. {N_("/File/_Quit"),         NULL,         window_exit_cb,         0,                           "<StockItem>", GTK_STOCK_QUIT    },
 #: src/yelp-window.c:162
@@ -191,7 +191,7 @@ msgstr "/Vés/_Índex"
 
 #: src/yelp-window.c:167
 msgid "/_Help"
-msgstr "/_Ajuda"
+msgstr "/A_juda"
 
 #: src/yelp-window.c:168
 msgid "/Help/_About"
@@ -222,7 +222,7 @@ msgstr "Endarrere"
 
 #: src/yelp-window.c:661
 msgid "Show previous page in history"
-msgstr "Mostra la pàgina anterior en l'història"
+msgstr "Mostra la pàgina anterior en la història"
 
 #: src/yelp-window.c:672
 msgid "Forward"
@@ -230,7 +230,7 @@ msgstr "Endavant"
 
 #: src/yelp-window.c:673
 msgid "Show next page in history"
-msgstr "Mostra la pàgina següent en l'història"
+msgstr "Mostra la pàgina següent en la història"
 
 #: src/yelp-window.c:686
 msgid "Home"
@@ -238,7 +238,7 @@ msgstr "Inici"
 
 #: src/yelp-window.c:687
 msgid "Go to home view"
-msgstr "Anar a la pàgina inicial"
+msgstr "Vés a la pàgina inicial"
 
 #: src/yelp-window.c:697
 msgid "Index"
@@ -246,11 +246,11 @@ msgstr "Índex"
 
 #: src/yelp-window.c:698
 msgid "Search in the index"
-msgstr "Cercar en l'índex"
+msgstr "Cerca en l'índex"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "Obtenir ajuda amb GNOME"
+msgstr "Obteniu ajuda amb GNOME"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
