--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-02  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Fixes.
+
 2002-09-01  Marius Andreiana <mandreiana@yahoo.com>
 
 	* ro.po: updated ( thanks to Mugurel Tudor <mugurelu@go.ro> )
