--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-03  Stanislav Brabec  <utx@penguin.cz>
+
+	* configure.in: Added cs to ALL_LINGUAS.
+
 2002-09-01  Marius Andreiana <mandreiana@yahoo.com>
 
 	* configure.in: added 'ro' to ALL_LINGUAS
