--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-03  Stanislav Brabec  <utx@penguin.cz>
+
+	* cs.po: Added Czech translation from Michal Bukovjan
+	<bukm@centrum.cz>.
+
 2002-09-02  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Fixes.
