--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Changes in 1.0.6:
+-----------------
+
+* Fixed build error on AIX, xlC compiler        (Benjamin Thery)
+* Updated translations (ca)
+* Added translations (ro, cs)
+
 Changes in 1.0.5:
 -----------------
 
