--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2002-09-04  Mikael Hallendal  <micke@codefactory.se>
+
+	* Release 1.0.6
+
+	* NEWS: udpated for 1.0.6
+
+	* configure.in: 1.0.6
+
 2002-09-01  Marius Andreiana <mandreiana@yahoo.com>
 
 	* configure.in: added 'ro' to ALL_LINGUAS
