--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-08  Yanko Kaneti  <yaneti@declera.com>
+
+	* configure.in: Added Hebrew (he) to ALL_LINGUAS
+
 2002-09-04  Mikael Hallendal  <micke@codefactory.se>
 
 	* Release 1.0.6
