--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-09  Takayuki KUSANO  <AE5T-KSN@asahi-net.or.jp>
+
+	* ja.po: Updated Japanese translation.
+
 2002-09-08  Gil 'Dolfin' Osher <dolfin@rpg.org.il>
 
 	* he.po (ADDED): Hebrew translation.
@@ -299,7 +303,6 @@
 
 	* ja.po: Updated Japanese translation.
 
->>>>>>> 1.155
 2002-04-19  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
 
 	* nl.po: Updated Dutch translation by Ronald Hummelink.
