--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-09  Pablo Gonzalo del Campo <pablodc@bigfoot.com>
+
+	* es.po: Fixed a shortcut in the main menu.
+
 2002-09-09  Takayuki KUSANO  <AE5T-KSN@asahi-net.or.jp>
 
 	* ja.po: Updated Japanese translation.
