--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-10  Pablo Gonzalo del Campo <pablodc@bigfoot.com>
+
+	* es.po: Fixed a typo.
+
 2002-09-09  Pablo Gonzalo del Campo <pablodc@bigfoot.com>
 
 	* es.po: Fixed a shortcut in the main menu.
