- initial support for <appendix> chunks
2002-09-16  Sander Vesik <sander.vesik@sun.com>

        * stylesheets/yelp-customization.xsl:
        - initial support for <appendix> chunks

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2002-09-16  Sander Vesik <sander.vesik@sun.com>
 
 	* stylesheets/yelp-customization.xsl:
+	- initial support for <appendix>
+
+2002-09-16  Sander Vesik <sander.vesik@sun.com>
+
+	* stylesheets/yelp-customization.xsl:
 	- unindent copyright
 	- leave space inbetween the 'Copyright' header and copyright
 	  holders
