Updated Spanish translation by Juan Manuel Garcia Molina
2002-09-16  Pablo Gonzalo del Campo <pablodc@bigfoot.com>

	* es.po: Updated Spanish translation by Juan Manuel Garcia Molina

--- a/po/es.po
+++ b/po/es.po
@@ -1,18 +1,19 @@
+# translation of yelp.gnome-2-0.po to Spanish
 # yelp spanish .po file.
-# Copyright (C) 2001 Free Software Foundation, Inc.
+# Copyright (C) 2001,2002 Free Software Foundation, Inc.
 # Juan Manuel García Molina <juanma_gm@wanadoo.es>, 2001-2002.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: GNOME 2.0\n"
-"POT-Creation-Date: 2002-09-10 05:11+0200\n"
-"PO-Revision-Date: 2002-09-10 18:24+0100\n"
+"Project-Id-Version: yelp.gnome-2-0\n"
+"POT-Creation-Date: 2002-09-09 05:14+0200\n"
+"PO-Revision-Date: 2002-09-11 00:22+0200\n"
 "Last-Translator: Juan Manuel García Molina <juanma_gm@wanadoo.es>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 0.9.6\n"
+"X-Generator: KBabel 1.0beta2\n"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -119,7 +120,7 @@ msgstr "Contenidos de la ayuda"
 
 #: src/yelp-view-toc.c:184
 msgid "GNOME - Desktop"
-msgstr "Escritorio de GNOME"
+msgstr "Escritorio - GNOME"
 
 #: src/yelp-view-toc.c:185
 msgid "Additional documents"
@@ -196,7 +197,7 @@ msgstr "/A_yuda"
 
 #: src/yelp-window.c:169
 msgid "/Help/_About"
-msgstr "/Ayuda/_Acerca de ..."
+msgstr "/Ayuda/_Acerca de"
 
 #: src/yelp-window.c:227 src/yelp-window.c:429
 msgid "Help Browser"
