--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-16  Pablo Gonzalo del Campo <pablodc@bigfoot.com>
+
+	* es.po: Updated Spanish translation by Juan Manuel Garcia Molina
+
 2002-09-10  Pablo Gonzalo del Campo <pablodc@bigfoot.com>
 
 	* es.po: Fixed a typo.
